# AI_Assistant_Using_DSPy_and_LangGraph

./: .gitignore  README.md  dspy_classifier_optimization.py  main.py  outputs_hybrid.jsonl  pyproject.toml  run_agent_hybrid.py
agent/: dspy_signatures.py  graph_hybrid.py
agent/rag/: retrieval.py
agent/tools/: sqlite_tool.py
docs/: catalog.md  kpi_definitions.md  marketing_calendar.md
